--- a/about.html
+++ b/about.html
@@ -81,63 +81,88 @@
         </div>
     </div>
 
-    <!--test contant-->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/img1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/img2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/img3.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/img4.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/img5.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div><br>
-
-    <div class=" animated fadeInUpBig">
-        <!-- Jumbotron -->
+    <div class=" animated fadeInDown">
         <div class="jumbotron">
             <div class="container">
-                <h1>Welcome to Waste Management</h1>
-                <p>Go Green</p>
-                <p>
-                    <a class="btn btn-primary btn-lg" href="about.html">Learn more about us</a>
-                </p>
+                <h1>About Us</h1>
+                <p>Waste Management are the activities and actions required to manage waste from its inception to its
+                    final
+                    disposal. This includes the collection, transport, treatment and disposal of waste, together with
+                    monitoring and regulation of the waste management process.Nowadays its a biggest problem faced in
+                    our
+                    country due to which we have come up with this idea.
+
+                    So here is the brief idea of the website,
+
+                    1.Central Hub
+
+                    2.Sub Central Hub
+
+                    3.People
+
+                    following are the features and the functions of each of attributes given above:-
+
+                    Central Hub
+                    This is the main centre which will collect all the waste,segregate and will be distributing it to
+
+                    the agro-based companies(wet waste) and plastic recycling companies(dry waste).The Central
+
+                    Hub would be doing segregation of the waste that will be collected from Sub-Centres.
+
+                    Segregation of the waste is done by the labourers employed there.The Central Hub will be
+
+                    having Tie-Ups done with the companies and MNC’s.
+
+                    2.Sub Central Hubs
+
+                    These are the units which collects garbage from different areas. These units will be located close
+
+                    to people so that people wont face any difficulty in distributing their waste.This garbage is
+
+                    collected from people and its stored in a godown. Each unit will have its own transport vehicle
+
+                    and that vehicle carries the waste and supply it to the central hub. A Sub-central hub will have a
+
+                    manager who will keep track of records of the waste given by the people. Manager also will
+
+                    update the daily status of the people who are giving the waste. This Sub-Centres will have
+
+                    points system which will basically attract people towards it. People will be paid for the amount of
+
+                    waste weights. Point system will be based on the amount of waste weight they give to the sub
+
+                    -centres. This will decrease the amount of waste that is been done everyday by the society
+
+                    Manager will update status of points earned by each one. He/She can also give money based on
+
+                    the points earned by people. Only the Manager has the rights to change and modify people
+
+                    details.
+
+                    3.People
+
+                    Waste is done everyday by each households. The waste can be distributed to the respected sub
+
+                    centres by only the registered people. People can register anytime from the portal.They dont have
+
+                    a compulsion of segregating the waste because its already done by Central-Hub. This system
+
+                    encourage people to cooperate with the company and protect our environment. This system even
+
+                    provides huge amount of employments even to those who are less educated. People are also
+
+                    provided their login by which they can check their current status and balance.</p>
             </div>
         </div>
-
         <!-- Cards -->
         <div class="text-center">
-            <h3>Our Vision</h3>
+            <h3>The Team</h3>
             <div class="card d-inline-block text-white mr-lg-3 mr-md-3 mr-sm-3 mr-xl-3 mt-3" style="width: 18rem;">
                 <div class="card-body">
                     <div class="card-title text-primary">
                         <div class="fas fa-home card_img pt-3"></div>
                     </div>
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Team Member 1</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
@@ -147,7 +172,7 @@
                     <div class="card-title text-primary">
                         <div class="fas fa-home card_img pt-3"></div>
                     </div>
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Team Member 2</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
@@ -157,7 +182,7 @@
                     <div class="card-title text-primary">
                         <div class="fas fa-home card_img pt-3"></div>
                     </div>
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Team Member 3</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
@@ -165,43 +190,8 @@
         </div>
         <br><br>
     </div>
-    <div class=" animated fadeInUpBig">
-        <div class="container-fluid">
-            <div class="text-center">
-                <div>
-                    <h5>Some Reasons</h5s>
-                        <h1>Why Choose Us</h1>
-                </div><br>
-                <div class="row">
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf sdhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf dhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf dhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf dhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf dhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4 col-xl-4 col-sm-12">
-                        <h3>High Quality Hardware</h3>
-                        <p>wdhhfg hsdfd f gusydgf uehduie ufu iuehd ydgfsydgf dhfvgyjfv dzhbfuyefb ehfgeyfg</p>
-                    </div>
-                </div>
-            </div>
-            <br>
-        </div>
 
+    <div class=" animated fadeInUpBig">
         <!--footer-->
         <div>
             <footer class="page-footers small unique-color-dark">
