--- a/form_signup.html
+++ b/form_signup.html
@@ -143,7 +143,7 @@
                             </label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                    <button type="submit" class="btn btn-primary"><a class=" text-white" href="form_loginppl.html">Sign Up</a></button>
                 </form>
             </div>
         </div>
